Everything compiles